salesforce-main/src/main/default/objects/Booking__c/fields/Automatic_Credit_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Credit_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Flow 4C_BPP AutomatedCreditNoteProcess so 4C PB - Booking Line knows not to reverse rev rec for these booking lines.</description>
    <label>Automatic Credit Triggered</label>
    <type>Checkbox</type>
</CustomField>