salesforce-main/src/main/default/objects/Booking__c/fields/BookedAPI__c.field-meta.xml
<CustomField>
    <fullName>BookedAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets checked when an API call is made to hub</description>
    <label>BookedAPI</label>
    <type>Checkbox</type>
</CustomField>