salesforce-main/src/main/default/objects/Booking__c/fields/Booking_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Cancelled</label>
    <type>Checkbox</type>
</CustomField>