salesforce-main/src/main/default/objects/Booking__c/fields/Booking_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmed_Date__c</fullName>
    <description>Timestamped when the status of the booking is changed to &quot;Confirmed&quot;</description>
    <label>Booking Confirmed Date</label>
    <type>DateTime</type>
</CustomField>