salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>BPP_Billing_Type__c</fullName>
    <formula>TEXT(Order__r.Billing_Type__c)</formula>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>