salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Cancellation_Action__c.field-meta.xml
<CustomField>
    <fullName>BPP_Cancellation_Action__c</fullName>
    <description>The purpose of this field is to determine whether or not the Booking&apos;s related dispatched materials should have a negative Revenue Schedule created for them when the Booking is cancelled.</description>
    <label>Cancellation Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Fulfilled Materials</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Credit Fulfilled Materials</fullName>
            </value>
            <value>
                <fullName>Credit Dispatched Materials</fullName>
                <isActive>false</isActive>
                <label>Credit Dispatched Materials</label>
            </value>
            <value>
                <fullName>Don&apos;t Credit Dispatched Materials</fullName>
                <isActive>false</isActive>
                <label>Don&apos;t Credit Dispatched Materials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>