salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Cancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>BPP_Cancellation_Terms__c</fullName>
    <description>To determine whether a Booking falls inside or outside of our cancellation terms.</description>
    <label>Cancellation Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>