salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>BPP_Credit_Amount__c</fullName>
    <formula>BLANKVALUE( Tuition_Price__c , 0) + BLANKVALUE( Material_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>