salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Instance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Instance_End_Date__c</fullName>
    <formula>Instance__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance End Date</label>
    <type>Date</type>
</CustomField>