salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Product__c.field-meta.xml
<CustomField>
    <fullName>BPP_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>