salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>BPP_Product_Name__c</fullName>
    <formula>Instance__r.Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>