salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>BPP_Related_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>