salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>BPP_Student_Name__c</fullName>
    <formula>Student__r.FirstName + &apos; &apos; + Student__r.LastName</formula>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>