salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Student_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>BPP_Student_Phone_Number__c</fullName>
    <formula>Student__r.Phone</formula>
    <label>Student Phone Number</label>
    <type>Text</type>
</CustomField>