salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Tech_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BPP_Tech_BillingCountry__c</fullName>
    <formula>Student__r.Client__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_BillingCountry</label>
    <type>Text</type>
</CustomField>