salesforce-main/src/main/default/objects/Booking__c/fields/BPP_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>BPP_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>