salesforce-main/src/main/default/objects/Booking__c/fields/CBA__c.field-meta.xml
<CustomField>
    <fullName>CBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If booking a CBA then this should contain a valid instance for the product</description>
    <label>CBA</label>
    <referenceTo>CBA__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>