salesforce-main/src/main/default/objects/Booking__c/fields/Duplicate_Booking__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Booking</label>
    <type>Checkbox</type>
</CustomField>