salesforce-main/src/main/default/objects/Booking__c/fields/Duplicate_Session__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Session</label>
    <type>Checkbox</type>
</CustomField>