salesforce-main/src/main/default/objects/Booking__c/fields/Duplicate_Warning__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Warning__c</fullName>
    <formula>IF(Duplicate_Booking__c = TRUE &amp;&amp; Duplicate_Session__c = TRUE, IMAGE(&quot;/resource/Warning_Icon&quot;, &quot;This student is already booked onto a similar Course.&quot;) &amp; &quot;This student is already booked onto a similar Course. &quot; &amp; &quot;This student is already booked onto a Course - the sessions of that course appear to overlap with the sessions on this course, Please review.&quot;,

IF(Duplicate_Booking__c = TRUE &amp;&amp; Duplicate_Session__c = FALSE, IMAGE(&quot;/resource/Warning_Icon&quot;, &quot;This student is already booked onto a similar Course.&quot;) &amp; &quot;This student is already booked onto a similar Course.&quot;,

IF(Duplicate_Session__c = TRUE &amp;&amp; Duplicate_Booking__c = FALSE, IMAGE(&quot;/resource/Warning_Icon&quot;, &quot;This student is already booked onto a similar Course.&quot;) &amp; &quot;This student is already booked onto a Course - the sessions of that course appear to overlap with the sessions on this course, Please review.&quot;, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Warning</label>
    <type>Text</type>
</CustomField>