salesforce-main/src/main/default/objects/Booking__c/fields/Exam_Price__c.field-meta.xml
<CustomField>
    <fullName>Exam_Price__c</fullName>
    <description>Roll up of cost of exams for this booking from the booking lines. To be used in reports as backing information for invoices</description>
    <label>Exam Price</label>
    <summarizedField>Booking_Line__c.blng_PreratedAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line__c.Product_Family__c</field>
        <operation>equals</operation>
        <value>Exam</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>