salesforce-main/src/main/default/objects/Booking__c/fields/Hub_Account__c.field-meta.xml
<CustomField>
    <fullName>Hub_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Student&apos;s Hub account that will be provisioned against this booking</description>
    <label>Hub Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Hub account is not associated with the student on the booking</errorMessage>
        <filterItems>
            <field>Hub_Account__c.Student__c</field>
            <operation>equals</operation>
            <valueField>$Source.Student__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hub_Account__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>