salesforce-main/src/main/default/objects/Booking__c/fields/Initiate_External_Callout__c.field-meta.xml
<CustomField>
    <fullName>Initiate_External_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Booking Status is updated and an external callout is needed, if the automation updates are successful, this flag will be set to true. This will initiate any require external callouts.</description>
    <label>Initiate External Callout</label>
    <type>Checkbox</type>
</CustomField>