salesforce-main/src/main/default/objects/Booking__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The instance this booking is for</description>
    <label>Instance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Instance__c.BPP_Instance_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>