salesforce-main/src/main/default/objects/Booking__c/fields/Instance_Location__c.field-meta.xml
<CustomField>
    <fullName>Instance_Location__c</fullName>
    <formula>Instance__r.Study_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Location</label>
    <type>Text</type>
</CustomField>