salesforce-main/src/main/default/objects/Booking__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <description>The instance name, Used in related lists</description>
    <formula>Instance__r.Instance_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Name</label>
    <type>Text</type>
</CustomField>