salesforce-main/src/main/default/objects/Booking__c/fields/Instance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Instance_Start_Date__c</fullName>
    <description>The start date of the instance for a booking</description>
    <formula>Instance__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Start Date</label>
    <type>Date</type>
</CustomField>