salesforce-main/src/main/default/objects/Booking__c/fields/Institute_Number__c.field-meta.xml
<CustomField>
    <fullName>Institute_Number__c</fullName>
    <description>Student&apos;s institute number for the institute associated with the booking</description>
    <label>Institute Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>