salesforce-main/src/main/default/objects/Booking__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>When booking status is set to On Hold then enter the reason in On Hold reason field</description>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>