salesforce-main/src/main/default/objects/Booking__c/fields/Pass_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Pass_Assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Assurance</label>
    <type>Checkbox</type>
</CustomField>