salesforce-main/src/main/default/objects/Booking__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>PO number related to this booking. This field is mandatory if the account requires PO&apos;s</description>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>