salesforce-main/src/main/default/objects/Booking__c/fields/Provisioned_Email__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Email__c</fullName>
    <description>Provisioning email at time of booking. If no Hub Email Address exists then the master email will be used</description>
    <inlineHelpText>Provisioning email when booking confirmed</inlineHelpText>
    <label>Provisioned Email</label>
    <type>Email</type>
</CustomField>