salesforce-main/src/main/default/objects/Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this booking.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>