salesforce-main/src/main/default/objects/Booking__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Dependant field to Status - reason should be given if the status cannot be progressed to &apos;Confirmed&apos;</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed Paper</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Changed Mind</fullName>
            </value>
            <value>
                <fullName>Extenuating Circumstances</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Apprenticeships - Break in Learning</fullName>
            </value>
            <value>
                <fullName>Apprenticeships – Leaver Not Achiever</fullName>
            </value>
            <value>
                <fullName>Complaint - HUB</fullName>
            </value>
            <value>
                <fullName>Complaint - Tutor</fullName>
            </value>
            <value>
                <fullName>Complaint - Materials</fullName>
            </value>
            <value>
                <fullName>Complaint - Marking</fullName>
            </value>
            <value>
                <fullName>Complaint - Student Experience</fullName>
            </value>
            <value>
                <fullName>Access – (Internal Fix)</fullName>
            </value>
            <value>
                <fullName>Exemption</fullName>
            </value>
            <value>
                <fullName>Client lead change</fullName>
            </value>
            <value>
                <fullName>IT fix</fullName>
            </value>
            <value>
                <fullName>Scheduling change</fullName>
            </value>
            <value>
                <fullName>Admin error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>