salesforce-main/src/main/default/objects/Booking__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student that will be attending this booking</description>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>