salesforce-main/src/main/default/objects/Booking__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <formula>Student__r.Account_ID_18_Character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student ID</label>
    <type>Text</type>
</CustomField>