salesforce-main/src/main/default/objects/Booking__c/fields/TECH_StudentClient__c.field-meta.xml
<CustomField>
    <fullName>TECH_StudentClient__c</fullName>
    <formula>Order__r.AccountId</formula>
    <label>TECH_StudentClient</label>
    <type>Text</type>
</CustomField>