salesforce-main/src/main/default/objects/Booking__c/fields/Tuition_Price__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Price__c</fullName>
    <description>Roll up of tuition cost from the booking lines. To be used in reports</description>
    <label>Tuition Price</label>
    <summarizedField>Booking_Line__c.blng_PreratedAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line__c.Product_Family__c</field>
        <operation>contains</operation>
        <value>Session</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>