salesforce-main/src/main/default/objects/Booking__c/recordTypes/CBA_Booking.recordType-meta.xml
<RecordType>
    <fullName>CBA_Booking</fullName>
    <active>true</active>
    <description>CBA bookings</description>
    <label>CBA Booking</label>
</RecordType>