salesforce-main/src/main/default/objects/Booking__c/recordTypes/Material_Booking.recordType-meta.xml
<RecordType>
    <fullName>Material_Booking</fullName>
    <active>true</active>
    <description>Material Booking</description>
    <label>Material or Fee Booking</label>
</RecordType>