salesforce-main/src/main/default/objects/Booking__c/validationRules/Account_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_On_Hold</fullName>
    <active>true</active>
    <description>If the Account related to the Order is on hold, no new bookings can be created.</description>
    <errorConditionFormula>Order__r.Account.On_Hold__c</errorConditionFormula>
    <errorMessage>The Account related to this order, is on Hold. No new bookings are allowed.</errorMessage>
</ValidationRule>