salesforce-main/src/main/default/objects/Booking__c/validationRules/Active_Instance_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Instance_Required</fullName>
    <active>true</active>
    <description>When a booking is &apos;active&apos; (when confirmed or put on hold) it ensures it has an active instance associated with the booking</description>
    <errorConditionFormula>(ISNEW() || 
ISCHANGED( Status__c ))
 &amp;&amp; 
(ISPICKVAL( Status__c , &apos;On Hold&apos; ) || 
ISPICKVAL( Status__c , &apos;Confirmed&apos; ))
 &amp;&amp; 
ISPICKVAL( Instance__r.BPP_Instance_Status__c , &apos;Deactivated&apos; )
&amp;&amp; 
ISBLANK( Instance__r.BPP_Replaced_By__c )</errorConditionFormula>
    <errorDisplayField>Instance__c</errorDisplayField>
    <errorMessage>The Instance associated with this booking has been deactivated. You will need to select another instance to continue.</errorMessage>
</ValidationRule>