salesforce-main/src/main/default/objects/Booking__c/validationRules/Cannot_Reconfirm_Cancelled_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reconfirm_Cancelled_Booking</fullName>
    <active>true</active>
    <description>To prevent a Cancelled Booking&apos;s Status from being set to Confirmed</description>
    <errorConditionFormula>AND(
ISPICKVAL((Status__c), &apos;Confirmed&apos;),
ISPICKVAL(PRIORVALUE(Status__c), &apos;Cancelled&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A cancelled Booking can not be reconfirmed. Please create a new Booking.</errorMessage>
</ValidationRule>