salesforce-main/src/main/default/objects/Booking__c/validationRules/CBA_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CBA_Required</fullName>
    <active>true</active>
    <description>A CBA booking must have a CBA record linking the product &amp; instance</description>
    <errorConditionFormula>RecordType.Name = &apos;CBA Booking&apos; &amp;&amp;
ISBLANK( CBA__c )</errorConditionFormula>
    <errorDisplayField>CBA__c</errorDisplayField>
    <errorMessage>A CBA booking must have a linked CBA record.</errorMessage>
</ValidationRule>