salesforce-main/src/main/default/objects/Booking__c/validationRules/CBA_Requires_Institute_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>CBA_Requires_Institute_Number</fullName>
    <active>true</active>
    <description>Institute Number is required for CBA bookings</description>
    <errorConditionFormula>RecordType.Name = &apos;CBA Booking&apos;
&amp;&amp;
ISBLANK( Institute_Number__c )</errorConditionFormula>
    <errorDisplayField>Institute_Number__c</errorDisplayField>
    <errorMessage>You must enter an Institute Number when making a CBA booking</errorMessage>
</ValidationRule>