salesforce-main/src/main/default/objects/Booking__c/validationRules/Hub_Account_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Hub_Account_Missing</fullName>
    <active>true</active>
    <description>There must be a Hub Account associated with the booking before it can be confirmed.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Confirmed&apos;) &amp;&amp; ISBLANK( Hub_Account__c ) &amp;&amp;( RecordType.DeveloperName == &apos;Material Booking&apos;)</errorConditionFormula>
    <errorDisplayField>Hub_Account__c</errorDisplayField>
    <errorMessage>A Hub Account must be added before confirming the booking</errorMessage>
</ValidationRule>