salesforce-main/src/main/default/objects/Booking__c/validationRules/PO_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Required</fullName>
    <active>true</active>
    <description>A PO number is required for bookings relating to this order.</description>
    <errorConditionFormula>AND(
Order__r.PO_Number_Required__c = TRUE,
ISBLANK( PO_Number__c )
)</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>Please add a PO Number.
A PO number is required for bookings relating to this order.</errorMessage>
</ValidationRule>