salesforce-main/src/main/default/objects/Booking__c/validationRules/Prevent_Student_Change_BStatus_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Student_Change_BStatus_Confirmed</fullName>
    <active>true</active>
    <description>To prevent a Student being changed on the Booking once Confirmed</description>
    <errorConditionFormula>AND(ISCHANGED(Student__c),ISPICKVAL(Status__c, &apos;Confirmed&apos;) )</errorConditionFormula>
    <errorDisplayField>Student__c</errorDisplayField>
    <errorMessage>You Should not change student for confirmed bookings</errorMessage>
</ValidationRule>