salesforce-main/src/main/default/objects/Booking__c/validationRules/Status_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Reason_Required</fullName>
    <active>true</active>
    <description>A status reason must be selected when the status is set as either &apos;On Hold&apos; or &apos;Cancelled&apos;.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISBLANK(TEXT(  Status_Reason__c  ))</errorConditionFormula>
    <errorDisplayField>Status_Reason__c</errorDisplayField>
    <errorMessage>A reason must be selected for the booking being in the current status</errorMessage>
</ValidationRule>