salesforce-main/src/main/default/objects/Booking__c/validationRules/Student_Relates_To_Order_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Relates_To_Order_Account</fullName>
    <active>true</active>
    <description>Student being booked onto the course must match the order account (B2C) or the order company account matches the student Client field (B2B).
Note: Have allowed business accounts in the B2C logic to avoid issues with company placeholders.</description>
    <errorConditionFormula>Student__r.Id &lt;&gt; Order__r.Account.Id &amp;&amp; 
Student__r.Client__r.Id &lt;&gt; Order__r.Account.Id &amp;&amp;
Order__r.Account.Name &lt;&gt; &apos;BPP - Functional Skills&apos;</errorConditionFormula>
    <errorDisplayField>Student__c</errorDisplayField>
    <errorMessage>The Student being booked must belong to the Account associated to the Order.
For B2C orders ensure the Student &amp; order Account match. For B2B orders ensure that the student&apos;s Client field is populated with the relevant company account.</errorMessage>
</ValidationRule>