salesforce-main/src/main/default/objects/Booking__c/validationRules/Validate_Cancellation_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Cancellation_Action</fullName>
    <active>true</active>
    <description>Cancellation Action is required if a Booking is cancelled</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISBLANK(TEXT( BPP_Cancellation_Action__c))</errorConditionFormula>
    <errorDisplayField>BPP_Cancellation_Action__c</errorDisplayField>
    <errorMessage>Cancellation Action is required if a Booking is cancelled</errorMessage>
</ValidationRule>