salesforce-main/src/main/default/objects/Booking__c/validationRules/Validate_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Cancellation_Reason</fullName>
    <active>false</active>
    <description>Cancellation Reason is required if a Booking is cancelled</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISBLANK( Cancellation_Reason__c )</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>You must enter Cancellation Reason if a Status is set to Cancelled</errorMessage>
</ValidationRule>