salesforce-main/src/main/default/objects/Booking__c/validationRules/Validate_Cancellation_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Cancellation_Terms</fullName>
    <active>true</active>
    <description>Cancellation Terms value is required if a Booking is cancelled</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISBLANK(TEXT( BPP_Cancellation_Terms__c))</errorConditionFormula>
    <errorDisplayField>BPP_Cancellation_Terms__c</errorDisplayField>
    <errorMessage>Cancellation Terms value is required if a Booking is cancelled</errorMessage>
</ValidationRule>