salesforce-main/src/main/default/objects/Booking__c/validationRules/Validate_On_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_On_Hold_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;On Hold&apos;) &amp;&amp; ISBLANK(On_Hold_Reason__c)</errorConditionFormula>
    <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
    <errorMessage>On Hold Reason is required if a Booking is On Hold</errorMessage>
</ValidationRule>