salesforce-main/src/main/default/objects/Booking__c/validationRules/Validate_Order_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Order_Status</fullName>
    <active>true</active>
    <description>This order isn&apos;t activated. An active order is required to make a Booking</description>
    <errorConditionFormula>NOT(ISPICKVAL(Order__r.Status, &apos;Activated&apos;))</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Please make sure Order is Activated</errorMessage>
</ValidationRule>